# llvm-compiler

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
cmake/: get_llvm.cmake
grammar/: Gazprea.g4
include/: BuiltInScalarTypeSymbol.h  BuiltInTypeQualifierSymbol.h  IntervalType.h  MatrixType.h  SubroutineSymbol.h  Symbol.h  SymbolTable.h  TupleType.h  Type.h  TypedefTypeSymbol.h  VariableSymbol.h
include/ast/: AST.h  ASTBuilder.h  DefWalk.h  RefWalk.h  TypeWalk.h
include/codegen/: LLVMGen.h  LLVMIRBranch.h  LLVMIRFunction.h  LLVMTypes.h
include/exceptions/: Exceptions.h  exceptions.h
include/scopes/: BaseScope.h  GlobalScope.h  LocalScope.h  Scope.h  SymbolTable.h
include/symbols/: BuiltInScalarTypeSymbol.h  SubroutineSymbol.h  Symbol.h  TypedefTypeSymbol.h  VariableSymbol.h
include/types/: IdentityNullType.h  IdentityType.h  IntervalType.h  MatrixType.h  TupleType.h  Type.h  TypePromote.h  TypePromotion.h
runtime/: Makefile  cmake_install.cmake
runtime/src/: Bool.h  BuiltInFunctions.c  BuiltInFunctions.h  CMakeLists.txt  Enums.c  Enums.h  FreeList.c  FreeList.h  Literal.c  Literal.h  Makefile  NDArray.c  NDArray.h  NDArrayVariable.c  NDArrayVariable.h  RuntimeErrors.c  RuntimeErrors.h  RuntimeStack.c  RuntimeStack.h  RuntimeTypes.c  RuntimeTypes.h  RuntimeVariables.c  RuntimeVariables.h  VariableStdio.c  VariableStdio.h  cmake_install.cmake
src/: BaseScope.cpp  BuiltInScalarTypeSymbol.cpp  BuiltInTypeQualifierSymbol.cpp  CMakeLists.txt  GlobalScope.cpp  IntervalType.cpp  Makefile  MatrixType.cpp  SubroutineSymbol.cpp  Symbol.cpp  SymbolTable.cpp  TupleType.cpp  TypedefTypeSymbol.cpp  VariableSymbol.cpp  cmake_install.cmake  main.cpp
src/ast/: AST.cpp  ASTBuilder.cpp  DefWalk.cpp  RefWalk.cpp  TypeWalk.cpp
src/codegen/: LLVMGen.cpp  LLVMIRBranch.cpp  LLVMIRFunction.cpp  LLVMTypes.cpp
src/exceptions/: Exceptions.cpp  exceptions.cpp
src/scopes/: BaseScope.cpp  GlobalScope.cpp  LocalScope.cpp  Scope.cpp  SymbolTable.cpp
src/symbols/: BuiltInScalarTypeSymbol.cpp  SubroutineSymbol.cpp  VariableSymbol.cpp
src/types/: IdentityNullType.cpp  IdentityType.cpp  IntervalType.cpp  MatrixType.cpp  TupleType.cpp  Type.cpp  TypePromote.cpp  TypePromotion.cpp  tmp.cpp
tests/: GazpreaConfig.json
tests/helpers/: README.md  cleansplit.py  memchk.py  testerr.py  testsplit.py
tests/helpers/error-reporting/: 0_Scope0_DoubleDeclaration.test  0_Scope1_UseBeforeDeclare.test  0_Scope2_DeclAfterBlockStart.test  0_Scope3_DeclAndIf.test  0_Scope4_DoubleDefinition.test  0_Scope5_FunctionNameCollision.test  1_Subroutine0_DeclaredButUndefined.test  1_Subroutine10_MismatchReturnType.test  1_Subroutine11_MismatchReturnType2.test  1_Subroutine12_MismatchSignature.test  1_Subroutine13_CallFunction.test  1_Subroutine14_CallBuiltInFunction.test  1_Subroutine15_CallBuiltInProcedure.test  1_Subroutine16_MissingMain.test  1_Subroutine17_ArrayAliasing.test  1_Subroutine1_FunctionWithoutReturn.test  1_Subroutine2_FunctionWithoutReturn2.test  1_Subroutine3_FunctionWithoutReturn3.test  1_Subroutine4_FunctionWithReturn.test  1_Subroutine5_ProcedureCallInBinop.test  1_Subroutine6_ProcedureCallInReturn.test  1_Subroutine7_ProcedureCallInStdout.test  1_Subroutine8_Aliasing.test  1_Subroutine9_InvalidReturn.test  2_TypeCheck0_WrongAdditionResultType.test  2_TypeCheck1_DeclarationWithLargerVector.test  2_TypeCheck2_DeclarationWithLargerMatrix.test  2_TypeCheck3_PromoteScalarToUnknownSize.test  2_TypeCheck4_WrongTypeAssignment.test  2_TypeCheck5_MultipleAssign.test  33_Reference.test  3_Stream0_RewindOver1024Bytes.test  4_Declaration0_AssignConstValue.test  4_Declaration1_PassConstValueAsVarParam.test  4_Declaration2_MultipleAssignConst.test  4_Declaration3_GlobalNotDeclaredConst.test  5_Branch0_DomainVarRef.test  5_Branch1_OuterDomainVarRef.test  5_Branch2_NakedBreak.test  5_Branch3_NakedContinue.test  (+6 more)
tests/helpers/test-source/: 0_EmptyInEmptyOut0_Empty.test  0_EmptyInEmptyOut1_Ast.test  0_EmptyInEmptyOut2_CharLiteral.test  10_GenFilter0_GeneratorAndTypes.test  10_GenFilter1_FilterAndTypes.test  10_Matrix0_MatrixLiteral.test  10_TypePromotion.test  11_BooleanPromotion.test  11_Grammar0_RealParsing.test  11_TypeCasting.test  12_BuiltIn0_LiteralLength.test  12_BuiltIn1_Dims.test  12_BuiltIn2_LiteralNColRow.test  12_Procedure.test  12_RecursiveFib.test  13_Function.test  13_Other0_DodgeBallV1.test  14_Qualifier.test  15_VMCheck.test  16_Inference.test  17_Streams.test  18_Loop.test  18_Loop1.in  18_Loop2_Return.test  18_Loop_IteratorFree.test  18_Loop_IteratorRetBreakCont.test  19_Branching.test  1_BinaryOp0_ScalarCmp.test  1_BinaryOp10_IntervalToRealVector.test  (+87 more)
tests/memory-checker/: memory_checker.py
(+203 files in other folders)
